refactor: Card enum을 CardScore와 CardSymbol을 갖는 클래스로 수정